@@ -1,3 +1,7 @@
+* 2014-04-06 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 31912: Don't apply personal reminder setting for appointments in shared folders  
+
 * 2014-04-02 - ioannis.chouklis@open-xchange.com
 
  - Fix for Bug 31855: [L3] email cannot be displayed and customer gets only a MSG-0020
